Bug 460416 - Paper Size, Address, Name Style, Phone Numbers are not immediately updated in the main page after modification
Summary: Paper Size, Address, Name Style, Phone Numbers are not immediately updated in...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_regionandlang (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 461160 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-14 10:01 UTC by Patrick Silva
Modified: 2023-10-24 14:40 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.1
Sentry Crash Report:


Attachments
screenshot (125.60 KB, image/png)
2022-10-30 01:49 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-10-14 10:01:45 UTC
STEPS TO REPRODUCE
1. open 'Region & Language' KCM
2. click on 'Modify...' button of any of these formats: Paper Size, Address, Name Style, Phone Numbers 
3.  choose an option different from the current one

OBSERVED RESULT
the KCM returns to the main page but the modified format was not updated. we need to apply the change, go to another KCM and then go back to 'Region & Language' KCM.

EXPECTED RESULT
formats should be immediately updated in the main page after the last step

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-10-14 19:36:17 UTC
Can reproduce.
Comment 2 Nate Graham 2022-10-15 15:44:12 UTC
Git commit dbe6fcc9ae7f37faf8e8bea23e1e653ce0b8feef by Nate Graham, on behalf of Akseli Lahtinen.
Committed on 15/10/2022 at 15:44.
Pushed by ngraham into branch 'master'.

kcms/region_language: Fix wrong defaults and examples

There were some wrong copy-pasted values in the code; here's a fix for them.

Also there was an accidental `,` instead of `;` in line 31 of `optionsmodel.cpp`

These should be all of them, thanks to Han Young who found the bugs.
FIXED-IN: 5.26.1

M  +6    -6    kcms/region_language/optionsmodel.cpp
M  +1    -1    kcms/region_language/regionandlangsettings.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/dbe6fcc9ae7f37faf8e8bea23e1e653ce0b8feef
Comment 3 hanyoung 2022-10-29 13:54:25 UTC
*** Bug 461160 has been marked as a duplicate of this bug. ***
Comment 4 Patrick Silva 2022-10-30 01:49:52 UTC
Created attachment 153309 [details]
screenshot

It's still reproducible. And if I click on 'Apply' button after the provided steps, I get the error message seen in the screenshot attached to this comment.

Operating System: Arch Linux
KDE Plasma Version: 5.26.2
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 5 hanyoung 2022-10-30 09:00:31 UTC
(In reply to Patrick Silva from comment #4)
> Created attachment 153309 [details]
> screenshot
> 
> It's still reproducible. And if I click on 'Apply' button after the provided
> steps, I get the error message seen in the screenshot attached to this
> comment.
> 
> Operating System: Arch Linux
> KDE Plasma Version: 5.26.2
> KDE Frameworks Version: 5.99.0
> Qt Version: 5.15.6
> Graphics Platform: Wayland

This is distro specific behavior. If you're not satisfied with ArchLinux's decision, you should file an issue there instead. https://github.com/archlinux/svntogit-packages/commit/2f2b1e3c683d489e946afacd08cea0aeda1ec15c
Comment 6 Peter Ped Helcmanovsky 2022-11-02 12:57:01 UTC
(In reply to hanyoung from comment #3)
> *** Bug 461160 has been marked as a duplicate of this bug. ***

this was KDE neon distro ( neon-user-20221023-0714.iso ), 5.26.2.

So that's also distro specific behaviour?  Shouldn't Neon work out of box as KDE flagship distro?
Comment 7 hanyoung 2023-10-24 14:40:13 UTC
*** Bug 476048 has been marked as a duplicate of this bug. ***