kcms/region_language: Fix wrong defaults and examples

There were some wrong copy-pasted values in the code; here's a fix for them.

Also there was an accidental `,` instead of `;` in line 31 of `optionsmodel.cpp`

These should be all of them, thanks to Han Young who found the bugs.

BUG: 460416
FIXED-IN: 5.26.1